--- a/10.12.2017.ipynb
+++ b/10.12.2017.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -39,6 +39,40 @@
    ],
    "source": [
     "f([1, 4, 5, 6, 7, 8, 9, 11, 2, 5], 3, 8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NEW"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def func(a, MIN, MAX):\n",
+    "    print([index for index, value in enumerate(a) if MIN <= value <= MAX])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "func([1, 4, 5, 6, 7, 8, 9, 11, 2, 5], 3, 8)"
    ]
   },
   {
